--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,25 @@
-<!doctype html> <!-- Important: must specify -->
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8"> <!-- Important: rapi-doc uses utf8 characters -->
-    <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
-  </head>
-  <body>
-    <rapi-doc spec-url = "https://raw.githubusercontent.com/Cantido/loom/main/openapi.yaml"> </rapi-doc>
-  </body>
+    <head>
+        <title>Loom</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.18/dist/css/uikit.min.css" />
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.18/dist/js/uikit.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.18/dist/js/uikit-icons.min.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Chivo:wght@400;700&display=swap" rel="stylesheet">
+        <style>
+          .uk-heading-large {
+            font-family: 'Chivo', sans-serif;
+          }
+        </style>
+    </head>
+    <body>
+        <div class="uk-light uk-background-cover uk-height-large uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-image: url(assets/gears.jpg);">
+            <h1 class="uk-heading-large">Cover</h1>
+        </div>
+
+    </body>
 </html>
